--- a/BoylerWifi/app/src/main/res/layout/activity_display_ssid.xml
+++ b/BoylerWifi/app/src/main/res/layout/activity_display_ssid.xml
@@ -11,13 +11,24 @@
     <ListView
         android:id="@+id/lstSsid"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageButton
+        android:id="@+id/imgRescan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/lstSsid"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 
 </android.support.constraint.ConstraintLayout>
