--- a/BoylerWifi/app/src/main/res/layout/wifi_network_layout.xml
+++ b/BoylerWifi/app/src/main/res/layout/wifi_network_layout.xml
@@ -9,13 +9,16 @@
 
     <TextView
         android:id="@+id/lblWiFiSSID"
-        android:layout_width="wrap_content"
+        android:layout_width="272dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_marginLeft="8dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="24dp"
-        app:layout_constraintLeft_toRightOf="@+id/imgWiFiIcon"/>
+        android:text="TextView"
+        app:layout_constraintLeft_toRightOf="@+id/imgWiFiIcon"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <ImageView
         android:id="@+id/imgWiFiIcon"
@@ -25,6 +28,7 @@
         android:layout_marginLeft="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"/>
 
 </android.support.constraint.ConstraintLayout>
