--- a/BWifiApp/app/src/main/res/layout/activity_wizard_ap_connection.xml
+++ b/BWifiApp/app/src/main/res/layout/activity_wizard_ap_connection.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="novellius.com.boylerwifi.activity.DisplaySSIDActivity">
+    tools:context="novellius.com.boylerwifi.activity.WizardAPConnectionActivity">
 
 
     <ListView
@@ -25,9 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"
-        android:layout_marginTop="16dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/lstSsid"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="32dp"
         app:layout_constraintRight_toRightOf="parent"/>
 
 
