--- a/BWifiApp/app/src/main/res/layout/wifi_network_layout.xml
+++ b/BWifiApp/app/src/main/res/layout/wifi_network_layout.xml
@@ -9,26 +9,24 @@
 
     <TextView
         android:id="@+id/lblWiFiSSID"
-        android:layout_width="272dp"
+        android:layout_width="296dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:text="TextView"
         app:layout_constraintLeft_toRightOf="@+id/imgWiFiIcon"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
         android:id="@+id/imgWiFiIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
         android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="24dp"/>
+        app:srcCompat="@mipmap/ic_launcher"/>
 
 </android.support.constraint.ConstraintLayout>
