--- a/BWifiApp/app/src/main/res/layout/activity_ap_connection.xml
+++ b/BWifiApp/app/src/main/res/layout/activity_ap_connection.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="novellius.com.boylerwifi.activity.WizardAPConnectionActivity">
+    tools:context="novellius.com.boylerwifi.activity.APConnectionActivity">
 
 
     <ImageButton
@@ -17,7 +17,7 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lstSsid"
-        app:srcCompat="?android:attr/actionModeCloseDrawable"/>
+        app:srcCompat="@mipmap/ic_launcher_round"/>
 
     <TextView
         android:id="@+id/lblStatus"
