--- a/BWifiApp/app/src/main/res/layout/input_password_layout.xml
+++ b/BWifiApp/app/src/main/res/layout/input_password_layout.xml
@@ -9,19 +9,16 @@
 
     <TextView
         android:id="@+id/lblSsidToConnect"
-        android:layout_width="304dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="32dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/imgWiFiIcon2"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"/>
 
     <ImageView
         android:id="@+id/imgWiFiIcon2"
@@ -96,6 +93,17 @@
         android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintRight_toLeftOf="@+id/btnConnect"
         app:layout_constraintTop_toBottomOf="@+id/chkShowPassword"/>
+
+    <ProgressBar
+        android:id="@+id/pbConnecting"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="16dp"
+        android:visibility="invisible"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </android.support.constraint.ConstraintLayout>
